style.css
body {
 line-height:1.5;
 font-family:"Raleway", "HelveticaNeue", "Helvetica Neue", Helvetica, Arial, sans-serif;
 max-width:50rem;
 margin:auto;
 text-align: center;
 padding-left:20px;
 padding-right:20px
}

h1 {
 font-size:3em;
 font-weight:300
}

a {
 color:#1eaedb;
 text-decoration:none;
 position:relative
}
a:visited {
 color:#1c809e
}
a::before {
 content:'';
 position:absolute;
 left:50%;
 bottom:0;
 width:100%;
 height:2px;
 background-color:#1eaedb;
 transform-origin:center;
 transform:translate(-50%, 0) scaleX(0);
 transition:transform 0.3s ease-in-out
}
a:hover::before {
 transform:translate(-50%, 0) scaleX(1)
}

